--- a/Rookie.AssetManagement.DataAccessor/Rookie.AssetManagement.DataAccessor.csproj
+++ b/Rookie.AssetManagement.DataAccessor/Rookie.AssetManagement.DataAccessor.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Ensure.That" Version="9.2.0" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.13.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
