--- a/Rookie.AssetManagement.GraphQL/appsettings.Development.json
+++ b/Rookie.AssetManagement.GraphQL/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=TUANNGUYEN\\SQLEXPRESS;Database=sample_project;User Id=sa;Password=123456"
+    "DbConnection": "Server=VNNOT02290\\TUANNGUYEN;Database=sample_project;User Id=sa;Password=Tuan0936097454@"
   }
 }
