--- a/Rookie.AssetManagement.GraphQL/.gitignore
+++ b/Rookie.AssetManagement.GraphQL/.gitignore
@@ -10,6 +10,7 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 appsettings.json
+appsettings.Development.json
 
 # Build results
 [Dd]ebug/
