--- a/Rookie.AssetManagement.GraphQL/Rookie.AssetManagement.GraphQL.csproj
+++ b/Rookie.AssetManagement.GraphQL/Rookie.AssetManagement.GraphQL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="7.1.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.13.2" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.13.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -14,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Rookie.AssetManagement.DataAccessor\Rookie.AssetManagement.DataAccessor.csproj" />
+    <ProjectReference Include="..\Rookie.AssetManagement.Contracts\Rookie.AssetManagement.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
