--- a/Rookie.AssetManagement/Frontend/package.json
+++ b/Rookie.AssetManagement/Frontend/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.9",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "bootstrap": "5.2.0",
