--- a/Pratical.ApiGateway/Pratical.ApiGateway.csproj
+++ b/Pratical.ApiGateway/Pratical.ApiGateway.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Ocelot" Version="18.0.0" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="18.0.0" />
     <PackageReference Include="Ocelot.Provider.Eureka" Version="18.0.0" />
     <PackageReference Include="Ocelot.Provider.Polly" Version="18.0.0" />
+  </ItemGroup>
+
+    <ItemGroup>
+    <ProjectReference Include="..\Rookie.AssetManagement.Contracts\Rookie.AssetManagement.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
